# templatey

./: conftest.py  pyproject.toml
.github/workflows/: on_pr-run_cicd.yaml  on_release-publish_pypi.yaml  on_trigger-publish_pypi_test.yaml
benchmarks/: templatey_benchmark_2025-10-06-1759767936.json  templatey_benchmark_2025-10-13-1760371241.json
sidecars_py/templatey_testutils/src_py/templatey_testutils/: __init__.py  profile_entrypoint.py
src_py/templatey/: __init__.py  _bootstrapping.py  _error_collector.py  _fields.py  _finalizers.py  _forwardrefs.py  _provenance.py  _renderer.py  _signature.py  _slot_tree.py  _types.py  environments.py  exceptions.py  modifiers.py  parser.py  renderer.py  templates.py
src_py/templatey/prebaked/: configs.py  env_funcs.py  loaders.py  template_configs.py
tests_py/: _fields.test.py  _finalizers.integr8.test.py  _finalizers.test.py  _provenance.test.py  _renderer.integr8.test.py  _slot_tree.test.py  test_e2e.py  test_environments.py  test_parser.py  test_renderer.py  test_slot_tree.py  test_templates.py
tests_py/prebaked/: configs.test.py
